--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,71 @@ body{
 	background-size: cover;
 	background-position: center;
 }
+
+/* All page styling Attributes */
+
+.container{
+	width:80%;
+	margin: auto;
+	overflow: hidden;
+}
+
+a{
+    color: #4892c0;
+}
+
+.current a{
+    color: #45799b;
+    font-weight: bold;
+}
+
+ul{
+	margin:0;
+	padding:0;
+}
+
+header{
+	padding-top:30px;
+	min-height:70px;
+}
+
+header a{
+	text-decoration:none;
+	font-size:16px;
+}
+
+header li{
+	float:left;
+	display:inline;
+	padding:0 20px 0 20px;
+}
+
+header #brand{
+	float:left;  
+}
+
+header #brand h1{
+	margin:0;
+}
+
+header nav{
+	float:right;
+	margin-top:10px;
+}
+ 
+header a:hover{
+	color:#4892c0;
+	font-weight:bold;
+}
+
+#homepage{
+	text-align:center;
+	color:#ffffff;
+	min-height: 400px;
+}
+
+#homepage h1{
+	margin-top: 100px;
+	margin-bottom: 10px;
+	font-size: 50px;
+}
