--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,12 @@ footer{
     text-align: center;
 }
 
+button{
+    background: #45799b;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+
 
 /*Styling Login & Sign Up Pages*/
 .login-pg{
